--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,7 @@
 	"printWidth": 100,
 	"useTabs": true,
 	"tabWidth": 4,
-	"semi": true
+	"semi": true,
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"tailwindStylesheet": "./src/app.css"
 }
