--- a/package.json
+++ b/package.json
@@ -1,57 +1,69 @@
 {
-  "name": "sveltekit-electron",
-  "version": "0.0.1",
-  "private": true,
-  "description": "Minimal Sveltekit + Electron starter template.",
-  "main": "src/electron.cjs",
-  "type": "module",
-  "author": "Braden Wiggins",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=dev bun run dev:all",
-    "dev:all": "concurrently -n=svelte,electron -c='#ff3e00',blue \"bun run dev:svelte\" \"bun run dev:electron\"",
-    "dev:svelte": "vite dev",
-    "dev:electron": "electron src/electron.cjs",
-    "build": "cross-env NODE_ENV=production bun run build:svelte && bun run build:electron",
-    "build:svelte": "vite build",
-    "build:electron": "electron-builder -mwl --config build.config.json"
-  },
-  "dependencies": {
-    "electron-context-menu": "^4.1.1",
-    "electron-reloader": "^1.2.3",
-    "electron-serve": "^3.0.0",
-    "electron-window-state": "^5.0.3"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-static": "3.0.10",
-    "@sveltejs/kit": "2.48.4",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
-    "concurrently": "^9.2.1",
-    "cross-env": "^10.1.0",
-    "dotenv": "^17.2.3",
-    "electron": "^39.1.2",
-    "electron-builder": "^26.0.12",
-    "electron-connect": "^0.6.3",
-    "electron-packager": "^17.1.2",
-    "electron-updater": "^6.6.2",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "^3.13.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "sass": "^1.94.0",
-    "svelte": "^5.43.6",
-    "svelte-check": "^4.3.4",
-    "tslib": "^2.8.1",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.2"
-  },
-  "trustedDependencies": [
-    "@parcel/watcher",
-    "electron",
-    "electron-winstaller",
-    "esbuild",
-    "svelte-preprocess"
-  ]
+	"name": "blossomos-installer",
+	"version": "0.0.1",
+	"private": true,
+	"description": "An installer application for blossomOS",
+	"main": "src/electron.cjs",
+	"type": "module",
+	"author": "blossomOS Team",
+	"scripts": {
+		"dev": "cross-env NODE_ENV=dev bun run dev:all",
+		"dev:all": "concurrently -n=svelte,electron -c='#ff3e00',blue \"bun run dev:svelte\" \"bun run dev:electron\"",
+		"dev:svelte": "vite dev",
+		"dev:electron": "electron src/electron.cjs",
+		"build": "cross-env NODE_ENV=production bun run build:svelte && bun run build:electron",
+		"build:svelte": "vite build",
+		"build:electron": "electron-builder -l --config build.config.json"
+	},
+	"dependencies": {
+		"electron-context-menu": "^4.1.1",
+		"electron-reloader": "^1.2.3",
+		"electron-serve": "^3.0.0",
+		"electron-window-state": "^5.0.3"
+	},
+	"devDependencies": {
+		"@internationalized/date": "^3.8.1",
+		"@lucide/svelte": "^0.553.0",
+		"@sveltejs/adapter-static": "3.0.10",
+		"@sveltejs/kit": "2.48.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "^4.1.14",
+		"@typescript-eslint/eslint-plugin": "^8.46.4",
+		"@typescript-eslint/parser": "^8.46.4",
+		"bits-ui": "^2.11.0",
+		"clsx": "^2.1.1",
+		"concurrently": "^9.2.1",
+		"cross-env": "^10.1.0",
+		"dotenv": "^17.2.3",
+		"electron": "^39.1.2",
+		"electron-builder": "^26.0.12",
+		"electron-connect": "^0.6.3",
+		"electron-packager": "^17.1.2",
+		"electron-updater": "^6.6.2",
+		"eslint": "^9.39.1",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.13.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.7.1",
+		"sass": "^1.94.0",
+		"svelte": "^5.43.6",
+		"svelte-check": "^4.3.4",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^3.1.1",
+		"tailwindcss": "^4.1.14",
+		"tslib": "^2.8.1",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "^5.9.3",
+		"vite": "^7.2.2"
+	},
+	"trustedDependencies": [
+		"@parcel/watcher",
+		"electron",
+		"electron-winstaller",
+		"esbuild",
+		"svelte-preprocess"
+	]
 }
